# NumLeanOpenCL

./: .gitignore  Main.lean  NumLeanOpenCL.lean  Profile.lean  README.md  cuda_lean_plan.md  lake-manifest.json  lakefile.lean  opencl_lean_plan.md
NumLeanOpenCL/: KernelExpr.lean  OpenCL.lean  Tactic.lean
NumLeanOpenCL/Data/: Float32Array.lean
NumLeanOpenCL/Data/Float32Array/: ArrayType.lean  BLASOps.lean  Basic.lean  Map.lean
NumLeanOpenCL/KernelExpr/: Basic.lean  HasKernelExpr.lean  Register.lean
NumLeanOpenCL/OpenCL/: Basic.lean
NumLeanOpenCL/Tactic/: ApplyRuleSets.lean
NumLeanOpenCL/Tactic/ApplyRuleSets/: Attr.lean  Core.lean  Elab.lean  RuleProc.lean  Types.lean
Tests/: Eval.lean  Main.lean
c/: CMakeLists.txt  opencl_lean.h  opencl_lean_context.c  opencl_lean_float32array.c  opencl_smoke.c
opencl/: float32array_add.cl  float32array_beq.cl  float32array_blas1.cl  float32array_sum.cl  smoke_add.cl
profile-viewer/: app.js  index.html  style.css
